--- a/index.html
+++ b/index.html
@@ -5,22 +5,18 @@
     <meta name="viewport" content="width = device-width,initial-scale = 1.0">
     <title>プライバシーポリシー</title>
       <style type="text/css">
+        #title1{margin-left:5em;width:400px;text-decoration:none}
       </style>
   </head>
   <body>
-    <h2>1.プロモーションテキスト</h2>
-     <p>お買い物先で買い忘れてガッカリしたことはありませんか。</p>
-     <p>出掛ける前までは覚えていたのに、ということはよくあります。</p>
-     <p>このアプリは、紙にメモする要領で手軽に使えるアプリです。</p>
-    <h2>概要〜アプリの使い方</h2>
-     <p>このアプリは、iOS 13.0 以降で使用可能です。
-       <ol>
-         <li>品物入力欄にソフトキーボードや音声で品物を入力</li>
-         <li>「OK」ボタンをタップしてリストに追加</li>
-         <li>入力した品物の取消は品物入力欄にその品物を入力して「DEL」ボタンをタップ</li>
-         <li>入力が済んだら「SAVE」ボタンをタップして保存</li>
-         <li>買い物先でアプリを起動し、保存データを表示</li>
-         <li>買い物が済んだら「MEMO RESET」ボタンをタップして保存データを削除</li
-       </ol>
+     <h1 id="title1" align="left">プライバシーポリシー</h1>
+     <h2 id="title1" align="left">【利用者情報の取得】</h2>
+      <p>本アプリが利用者の個人情報を取得することはありません。</p>
+     <h2 id="title1" align="left">【利用者情報の利用】</h2>
+      <p>本アプリが利用者の個人情報を利用することはありません。
+     <h2 id="title1 align="left">【利用者情報の第三者提供】</h2>
+      <p>本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
+     <h2 id="title1" align="left">【使用ツール】</h2>
+      <p>本アプリはiOS 13.0以降で使用可能です。</p>       
   </body>
 </html>
