--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>プライバシーポリシー</title>
       <style type="text/css">
         #title1{margin-left:5em;width:400px;text-decoration:none}
-        #title2{margin-left:6em}
+        #title2{margin-left:10em}
       </style>
   </head>
   <body>
@@ -14,7 +14,7 @@
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を取得することはありません。</p>
      <h2 id="title1" align="left">【利用者情報の利用】</h2>
-      <p id="title2 align="left">本アプリが利用者の個人情報を利用することはありません。
+      <p id="title2" align="left">本アプリが利用者の個人情報を利用することはありません。
      <h2 id="title1" align="left">【利用者情報の第三者提供】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
      <h2 id="title1" align="left">【使用ツール】</h2>
