--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width = device-width,initial-scale = 1.0">
     <title>プライバシーポリシー</title>
       <style type="text/css">
-        #title1{margin-left:5em;width:400px;text-decoration:none}
-        #title2{margin-left:10em}
+        #title1{margin-left:2em;width:400px;text-decoration:none}
+        #title2{margin-left:5em}
       </style>
   </head>
   <body>
+    <div>
+      
+    </div>
      <h1 id="title1" align="left">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を取得することはありません。</p>
