--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
       <style type="text/css">
         #title1{margin-left:2em;width:400px;text-decoration:none}
         #title2{margin-left:5em}
+        p{font-size:large}
+        h{color:#009da5}
       </style>
   </head>
   <body>
     <div>
       
     </div>
-     <h1 id="title1" align="left" background="orange">プライバシーポリシー</h1>
-     <h2 id="title1" align="left" color="blue">【利用者情報の取得】</h2>
+     <h1 id="title1" align="left">プライバシーポリシー</h1>
+     <h2 id="title1" align="left">【利用者情報の取得】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を取得することはありません。</p>
-     <h2 id="title1" align="left" color="blue">【利用者情報の利用】</h2>
+     <h2 id="title1" align="left">【利用者情報の利用】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を利用することはありません。
-     <h2 id="title1" align="left" color="blue">【利用者情報の第三者提供】</h2>
+     <h2 id="title1" align="left">【利用者情報の第三者提供】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
-     <h2 id="title1" align="left" color="blue">【使用ツール】</h2>
+     <h2 id="title1" align="left">【使用ツール】</h2>
       <p id="title2" align="left">本アプリはiOS 13.0以降で使用可能です。</p>       
   </body>
 </html>
