--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         #title1{margin-left:2em;width:400px;text-decoration:none}
         #title2{margin-left:5em}
         p{font-size:large}
-        h{color:#009da5}
+        h2{color:#009da5}
       </style>
   </head>
   <body>
