--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       </style>
   </head>
   <body>
-    <div>
-      
+    <div　align="left">
+      <img src="/Users/ym/Document/image_23">
     </div>
      <h1 id="title1" align="left">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
