--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div　align="left">
-      <img src="/Users/ym/Document/image_23 .png" alt="">
+      <img src="/Users/ym/Document/image_23 " alt="">
     </div>
      <h1 id="title1" align="left">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
