--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div　align="left">
-      <img src="image_23.jpg">
+      <img src="image_23.jpg" alt="">
     </div>
      <h1 id="title1" align="left">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
