--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         #title2{margin-left:5em}
         p{font-size:large}
         h2{color:#009da5}
+        h1{background-color:pink}
       </style>
   </head>
   <body>
