--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div　align="left">
       <img src="image_23.jpg" alt="">
     </div>
-     <h1 id="title1" align="left">プライバシーポリシー</h1>
+     <h1 id="title1" align="center">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を取得することはありません。</p>
      <h2 id="title1" align="left">【利用者情報の利用】</h2>
