--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       </style>
   </head>
   <body>
+    <div　class="flex">
+      <figure class="image"><img src="image_1.jpg" alt="">
+    </div>
+    <div class="right">
      <h1 id="title1" align="center">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を取得することはありません。</p>
@@ -22,8 +26,7 @@
       <p id="title2" align="left">本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
      <h2 id="title1" align="left">【使用ツール】</h2>
       <p id="title2" align="left">本アプリはiOS 13.0以降で使用可能です。</p>
-    <div　align="left">
-      <img src="image_1.jpg" alt="">
     </div>
+    </div> 
   </body>
 </html>
