--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>プライバシーポリシー</title>
       <style type="text/css">
         #title1{margin-left:15em;width:400px;text-decoration:none}
-        #title2{margin-left:30em}
+        #title2{margin-left:25em}
         p{font-size:large}
         h2{color:#009da5}
         h1{background-color:pink}
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div　class="flex">
-      <figure class="image"><img src="image_1.jpg" alt="">
+      <figure class="image"><img src="image_1.jpg" alt=""></figure>
     </div>
     <div class="right">
      <h1 id="title1" align="center">プライバシーポリシー</h1>
