--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         p{font-size:large}
         h2{color:#009da5}
         h1{background-color:pink}
+        img{float:left}
       </style>
   </head>
   <body>
