--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         p{font-size:large}
         h2{color:#009da5}
         h1{background-color:pink}
-        img{float:left}
+        
       </style>
   </head>
   <body>
-    <div　class="flex">
-      <figure class="image"><img src="image_1.jpg" alt=""></figure>
+    <div>
+      <img src="image_1.jpg" alt="">
     </div>
-    <div class="right">
+    <div>
      <h1 id="title1" align="center">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を取得することはありません。</p>
