--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         p{font-size:large}
         h2{color:#009da5}
         h1{background-color:pink}
-        
       </style>
   </head>
   <body>
@@ -18,6 +17,7 @@
       <img src="image_1.jpg" alt="">
     </div>
     <div>
+      <img src="icon.jpg" alt=""><p>Effortless Shopping アプリ</p> 
      <h1 id="title1" align="center">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を取得することはありません。</p>
