--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
   </head>
   <body>
     <div>
+      <img src="icon.jpg" alt="">
       <img src="image_1.jpg" alt="">
     </div>
     <div>
+     <p>Effortless Shopping アプリ</p> 
      <h1 id="title1" align="center">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を取得することはありません。</p>
@@ -25,8 +27,7 @@
      <h2 id="title1" align="left">【利用者情報の第三者提供】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
      <h2 id="title1" align="left">【使用ツール】</h2>
-      <p id="title2" align="left">本アプリはiOS 13.0以降で使用可能です。</p>
-      <img src="icon.jpg" alt=""><p>Effortless Shopping アプリ</p> 
+      <p id="title2" align="left">本アプリはiOS 13.0以降で使用可能です。</p>   
     </div>
     </div> 
   </body>
