--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div>
       <img src="image_1.jpg" alt="">
     </div>
-    <div>  
+    <div>
+      <h1 id="title1" align="left"><span><img src="icon".jpg alt=""></span></h1> 
      <h1 id="title1" align="center">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を取得することはありません。</p>
