--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width = device-width,initial-scale = 1.0">
     <title>プライバシーポリシー</title>
       <style type="text/css">
-        #title1{margin-left:15em;width:400px;text-decoration:none}
+        #title1{margin-left:15em;width:440px;text-decoration:none}
         #title2{margin-left:25em}
         p{font-size:large}
         h2{color:#009da5}
-        h1{background-color:pink}
+        // h1{background-color:pink}
         img{float:left}
       </style>
   </head>
   <body>
     <div>
+      <br>
       <img src="image_1.jpg" alt="">
     </div>
     <div>
