--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="image_1.jpg" alt="">
     </div>
     <div>
-      <h1 id="title1" align="center"><span><img src="icon".jpg alt=""></span>Effortless Shopping</h1>
+      <h1 id="title1" align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
       <br>
      <h1 id="title1" align="center">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
