--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         #title2{margin-left:25em}
         p{font-size:large}
         h2{color:#009da5}
-        // h1{background-color:pink}
+        h1{background-color:pink}
         img{float:left}
       </style>
   </head>
