--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <style type="text/css">
         #title1{margin-left:15em;width:440px;text-decoration:none}
         #title2{margin-left:25em}
-        p{font-size:large}
+        p{font-size:x-large}
         h2{color:#009da5}
         h1{background-color:pink}
         img{float:left}
@@ -19,7 +19,7 @@
       <img src="image_1.jpg" alt="">
     </div>
     <div>
-      <h1 id="title1" align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
+      <h1 align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
       <br>
      <h1 id="title1" align="center">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
@@ -29,7 +29,17 @@
      <h2 id="title1" align="left">【利用者情報の第三者提供】</h2>
       <p id="title2" align="left">本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
      <h2 id="title1" align="left">【使用ツール】</h2>
-      <p id="title2" align="left">本アプリはiOS 13.0以降で使用可能です。</p>   
+      <p id="title2" align="left">本アプリはiOS 13.0以降で使用可能です。</p>
+      <h1 id="title1" align="left">アプリの使い方</h1>
+       <ol>
+         <li>入力欄にソフトキーボードや音声で品物を入力</li>
+         <li>「OK」ボタンをタップしてリストに追加</li>
+         <li>入力した品物の取消は入力欄にその品物を入力して「DEL」ボタンをタップ</li>
+         <li>ソフトキーボードの改行ボタンをタップしてリストを拡大して表示</li>
+         <li>入力が済んだら「SAVE」ボタンをタップして保存</li>
+         <li>買い物先でアプリを起動し、保存データを表示</li>
+         <li>買い物が済んだら「MEMO RESET」ボタンをタップして保存データを削除</li>
+      </ol>
     </div>
     </div> 
   </body>
