--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="image_1.jpg" alt="">
     </div>
     <div>
-      <h1 align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
+      <h1 id="title1" align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
       <br>
      <h1 id="title1" align="center">プライバシーポリシー</h1>
      <h2 id="title1" align="left">【利用者情報の取得】</h2>
@@ -30,6 +30,7 @@
       <p id="title2" align="left">本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
      <h2 id="title1" align="left">【使用ツール】</h2>
       <p id="title2" align="left">本アプリはiOS 13.0以降で使用可能です。</p>
+      <br>
       <h1 id="title1" align="left">アプリの使い方</h1>
        <ol>
          <li>入力欄にソフトキーボードや音声で品物を入力</li>
