--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      <h2 id="title1" align="left">【使用ツール】</h2>
       <p id="title2" align="left">本アプリはiOS 13.0以降で使用可能です。</p>
       <br>
-      <h1 id="title1" align="left">アプリの使い方</h1>
+      <h1 id="title1" align="center">アプリの使い方</h1>
        <ol>
          <li>入力欄にソフトキーボードや音声で品物を入力</li>
          <li>「OK」ボタンをタップしてリストに追加</li>
