--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <style type="text/css">
         #title1{margin-left:15em;width:440px;text-decoration:none}
         #title2{margin-left:25em}
-        p{font-size:x-large}
+        p{font-size:large}
         h2{color:#009da5}
         h1{background-color:pink}
         img{float:left}
