--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>プライバシーポリシー</title>
       <style type="text/css">
         #title1{margin-left:15em;width:440px;text-decoration:none}
-        #title2{margin-left:25em}
+        #title2{margin-left:23em}
         p{font-size:large}
         h2{color:#009da5}
         h1{background-color:pink}
+        li{margin-left:20em;font-size:large}
         img{float:left}
       </style>
   </head>
