--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div>
       <br>
-      <img src="image_1.jpg" alt="">
+      <img src="image2.jpg" alt="">
     </div>
     <div>
       <h1 id="title1" align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
