--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       <style type="text/css">
         #title1{margin-left:17em;width:440px;text-decoration:none}
         #title2{margin-left:25em}
+        #title3{margin-left:18em;width:440px;text-decoration:none}
+        #title4{margin-left:27em}
         p{font-size:large}
         h2{color:#009da5}
         h1{background-color:pink}
@@ -23,14 +25,14 @@
       <h1 id="title1" align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
       <br>
      <h1 id="title1" align="center">プライバシーポリシー</h1>
-     <h2 id="title1" align="left">【利用者情報の取得】</h2>
-      <p id="title2" align="left">本アプリが利用者の個人情報を取得することはありません。</p>
-     <h2 id="title1" align="left">【利用者情報の利用】</h2>
-      <p id="title2" align="left">本アプリが利用者の個人情報を利用することはありません。
-     <h2 id="title1" align="left">【利用者情報の第三者提供】</h2>
-      <p id="title2" align="left">本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
-     <h2 id="title1" align="left">【使用ツール】</h2>
-      <p id="title2" align="left">本アプリはiOS 13.0以降で使用可能です。</p>
+     <h2 id="title3" align="left">【利用者情報の取得】</h2>
+      <p id="title4" align="left">本アプリが利用者の個人情報を取得することはありません。</p>
+     <h2 id="title3" align="left">【利用者情報の利用】</h2>
+      <p id="title4" align="left">本アプリが利用者の個人情報を利用することはありません。
+     <h2 id="title3" align="left">【利用者情報の第三者提供】</h2>
+      <p id="title4" align="left">本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
+     <h2 id="title3" align="left">【使用ツール】</h2>
+      <p id="title4" align="left">本アプリはiOS 13.0以降で使用可能です。</p>
       <h1 id="title1" align="center">アプリの使い方</h1>
        <ol>
          <li>入力欄にソフトキーボードや音声で品物を入力</li>
