--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
          <li>入力欄にソフトキーボードや音声で品物を入力</li>
          <li>「OK」ボタンをタップしてリストに追加</li>
          <li>入力した品物の取消は入力欄にその品物を入力して「DEL」ボタンをタップ</li>
-         <li>ソフトキーボードの改行ボタンをタップしてリストを拡大して表示</li>
+         <li>ソフトキーボードの「return」ボタンをタップしてリストを拡大して表示</li>
          <li>入力が済んだら「SAVE」ボタンをタップして保存</li>
          <li>買い物先でアプリを起動し、保存データを表示</li>
          <li>買い物が済んだら「MEMO RESET」ボタンをタップして保存データを削除</li>
