--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <div>
       <h1 id="title1" align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
+      <p><span class="term">手書きメモ不要</font></span></p>
       <br>
      <h1 id="title1" align="center">プライバシーポリシー</h1>
      <h2 id="title3" align="left">【利用者情報の取得】</h2>
