--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
     <div>
       <h1 id="title1" align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
-      <div style="color:red;font-weight:bold;text-align:center;>
-       <p>手書きメモ不要</p>
+      <div text-align:center;>
+        <p><span style="color=red;font-weight:bold;">手書きメモ不要</span></p>
       </div>
       <br>
      <h1 id="title1" align="center">プライバシーポリシー</h1>
