--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img src="image2.jpg" alt="">
     </div>
     <div>
-        <h1 id="title1" align="center"><span><img src="icon2.jpg" alt=""></span>Comfort Shopping</h1>
+        <h1 id="title1" align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
         <br>
         <h1 id="title1" align="center">Privacy Policy</h1>
         <h2 id="title3" align="left">【Acquisition of user information】</h2>
