--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <img src="image2.jpg" alt="">
     </div>
     <div>
+        <h1 id="title1" align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
+        <br>
         <h1 id="title1" align="center">プライバシーポリシー</h1>
         <h2 id="title3" align="left">【個人情報の取得】</h2>
         <p id="title4" align="left">本アプリは、利用者の個人情報を取得しません。</p>
