--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
     </style>
 </head>
 <body>
-    <div>
-        <br>
-        <img src="image2.jpg" alt="">
-    </div>
+    
     <div>
         <h1 id="title1" align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
         <br>
@@ -52,9 +49,9 @@
         <h2 id="title3" align="left">【個人情報の取得】</h2>
         <p id="title4" align="left">本アプリは、利用者の個人情報を取得しません。</p>
         <h2 id="title3" align="left">【個人情報の利用】</h2>
-        <p id="title4" align="left">本アプリは、ユーザーの個人情報を使用しません。</p>
+        <p id="title4" align="left">本アプリは、利用者の個人情報を使用しません。</p>
         <h2 id="title3" align="left">【個人情報の第三者提供】</h2>
-        <p id="title4" align="left">本アプリは、ユーザーの個人情報を第三者に提供しません。</p>
+        <p id="title4" align="left">本アプリは、利用者の個人情報を第三者に提供しません。</p>
         <h2 id="title3" align="left">【使用ツール】</h2>
         <p id="title4" align="left">本アプリは、iOS 13.0 以降で使用できます。</p>
         <h1 id="title1" align="center">アプリの使い方</h1>
