--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     </style>
 </head>
 <body>
-    
+    <div>
+        <br>
+        <img src="image2.jpg" alt="">
+    </div>
     <div>
         <h1 id="title1" align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
         <br>
