--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         p{
           font-size:large
         }
-        h2{
+        h3{
           color:#009da5
         }
-        h1{
+        h2{
           background-color:pink
         }
         li{
@@ -39,16 +39,17 @@
 <body>
     
     <div>
-        <h1 id="title1" align="center"><span><img src="icon.jpg" alt=""></span>Effortless Shopping</h1>
+        <img src="icon.jpg" alt="">
+        <h2 id="title1" align="center">Effortless Shopping</h2>
         <br>
-        <h1 id="title1" align="center">プライバシーポリシー</h1>
-        <h2 id="title2" align="left">【個人情報の取得】</h2>
+        <h2 id="title1" align="center">プライバシーポリシー</h2>
+        <h3 id="title2" align="left">【個人情報の取得】</h3>
         <p id="title3" align="left">本アプリは、利用者の個人情報を取得しません。</p>
-        <h2 id="title2" align="left">【個人情報の利用】</h2>
+        <h3 id="title2" align="left">【個人情報の利用】</h3>
         <p id="title3" align="left">本アプリは、利用者の個人情報を使用しません。</p>
-        <h2 id="title2" align="left">【個人情報の第三者提供】</h2>
+        <h3 id="title2" align="left">【個人情報の第三者提供】</h3>
         <p id="title3" align="left">本アプリは、利用者の個人情報を第三者に提供しません。</p>
-        <h2 id="title2" align="left">【使用ツール】</h2>
+        <h3 id="title2" align="left">【使用ツール】</h3>
         <p id="title3" align="left">本アプリは、iOS 13.0 以降で使用できます。</p>
     </div> 
 </body>
