--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     <div>
         <img src="icon.jpg" alt="">
         <br>
-        <h2 id="title1" align="center">Effortless Shopping</h2>
-        <br>
+        <h2 id="title1" align="center"><a href="https://apps.apple.com/do/app/effortlessshopping/id1659607543?uo=2">Effortless Shopping</a></h2>
+        <p>お買い物先で買い忘れてガッカリしたことはありませんか。</p>
+        <p>出掛ける前までは覚えていたのに、ということはよくあります。</p>
+        <p>このアプリは紙にメモする要領で手軽に使えるアプリです。</p>
         <h2 id="title1" align="center">プライバシーポリシー</h2>
         <h3 id="title2" align="left">【個人情報の取得】</h3>
         <p id="title3" align="left">本アプリは、利用者の個人情報を取得しません。</p>
@@ -51,6 +53,8 @@
         <p id="title3" align="left">本アプリは、利用者の個人情報を第三者に提供しません。</p>
         <h3 id="title2" align="left">【使用ツール】</h3>
         <p id="title3" align="left">本アプリは、iOS 13.0 以降で使用できます。</p>
+        <br>
+        <img src="image2.jpg" alt="">
     </div> 
 </body>
 </html>
