--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <img src="icon.jpg" alt="">
         <br>
         <h2 id="title1" align="center"><a href="https://apps.apple.com/do/app/effortlessshopping/id1659607543?uo=2">Effortless Shopping</a></h2>
+        <h3 id="title2" align="left">【お買い物先で使えるiPhoneアプリ】</h3>
         <p>お買い物先で買い忘れてガッカリしたことはありませんか。</p>
         <p>出掛ける前までは覚えていたのに、ということはよくあります。</p>
         <p>このアプリは紙にメモする要領で手軽に使えるアプリです。</p>
