--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div>
         <img src="icon.jpg" alt="">
         <br>
-        <h2 id="title1" align="center"><a href="https://apps.apple.com/do/app/effortlessshopping/id1659607543?uo=2">Effortless Shopping</a></h2>
+        <h2 id="title1" align="center"></h2>
         <h3 id="title2" align="left">【お買い物先で使えるアプリ】</h3>
         <p>買い物に出掛けて買い忘れたことはありませんか？</p>
         <p>直前までは覚えていたのにとがっかりすることはよくあります。</p>
