--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div>
         <img src="icon.jpg" alt="">
         <br>
-        <h2 id="title1" align="center">快適ショッピング<br>(Effortless Shopping)</h2>
+        <h2 id="title1" align="center">買い物リストアプリ</h2>
         <h3 id="title2" align="left">【お買い物先で使えるアプリ】</h3>
         <p>買い物に出掛けて買い忘れたことはありませんか？</p>
         <p>直前までは覚えていたのにとがっかりすることはよくあります。</p>
@@ -63,8 +63,8 @@
         <p id="title3" align="left">本アプリは、利用者の個人情報を第三者に提供しません。</p>
         <p id="title3" align="left">This application does not provide users' personal information to third parties.</p>
         <h3 id="title2" align="left">【使用ツール】</h3>
-        <p id="title3" align="left">本アプリは、iOS 13.0 以降で使用できます。</p>
-        <p id="title3" align="left">This app can be used with iOS 13.0 or later.</p>
+        <p id="title3" align="left">本アプリは、iOS 16.0 以降で使用できます。</p>
+        <p id="title3" align="left">This app can be used with iOS 16.0 or later.</p>
         <br>
     </div> 
 </body>
