--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div>
         <img src="icon.jpg" alt="">
         <br>
-        <h2 id="title1" align="center">買い物リストアプリ</h2>
-        <h3 id="title2" align="left">【お買い物先で使えるアプリ】</h3>
+        <h2 id="title1" align="center">買い物リスト -今日のお買い物メモ-</h2>
+        <h3 id="title2" align="left">【手書き不要のメモ帳アプリ】</h3>
         <p>買い物に出掛けて買い忘れたことはありませんか？</p>
         <p>直前までは覚えていたのにとがっかりすることはよくあります。</p>
         <p>このアプリは、スマホを片手に手軽に使えるアプリです。</p>
